<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UC Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="strLogin">Login to your UC Account</string>
    <string name="strUsername">Username (6+2)</string>
    <string name="strPassword">Password</string>
    <string name="strLoginBtn">Login</string>
    <string name="strCalendar">Calendar</string>
    <string name="strBack">Back</string>
    <string name="strTitle">Enter Title:</string>
    <string name="strDate">Enter Date:</string>
    <string name="strStartTime">Start Time:</string>
    <string name="strEndTime">End Time:</string>
    <string name="strCancel">Cancel</string>
    <string name="strConfirm">Confirm</string>
    <string name="strInvalidCredentials">Invalid Username and Password Combination</string>
    <string name="strStart">Start: </string>
    <string name="strEnd">End: </string>
    <string name="strDays">Days: </string>
    <string name="strUCLogoDesc">University of Cincinnati Logo</string>

</resources>