<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <!-- Text field used to input the password of the user.
    	 It has the properties of a password text field which makes the text appear as private.-->

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etUsername"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/strPassword"
        android:inputType="textPassword"
        android:text="test" >

    </EditText>

    <!-- Button used to login to the UC database with the user's  credentials. -->

    <!-- Displays the text to prompt the user to fill in their credentials. -->
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/strLogin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Text field for the user's username. -->

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        android:layout_alignRight="@+id/tvLogin"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/strUsername"
        android:singleLine="true"
        android:text="johns2au" >

        <requestFocus />
 	</EditText>

     <!-- Button used to view the local calendar. -->

    <TextView
        android:id="@+id/tvInvalidUnPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/strInvalidCredentials"
        android:textColor="#FF0033"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInvalidUnPw"
        android:layout_centerHorizontal="true"
        android:text="@string/strLoginBtn" />

    <ImageView
        android:id="@+id/UCLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLogin"
        android:layout_alignLeft="@+id/etUsername"
        android:layout_toLeftOf="@+id/btnLogin"
        android:contentDescription="@string/strUCLogoDesc"
        android:src="@drawable/uclogo"
        android:tint="#55ff0000" />

</RelativeLayout>