<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/strTitle"
        android:text="@string/strTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTitle"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_marginBottom="47dp"
        android:text="@string/strDate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="34dp"
        android:text="@string/strStartTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvStartTime"
        android:layout_below="@+id/tvStartTime"
        android:layout_marginTop="31dp"
        android:text="@string/strEndTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvDate"
        android:layout_marginLeft="66dp"
        android:layout_toRightOf="@+id/tvDate"
        android:ems="10"
        android:hint="1/1/2011"
        android:inputType="date" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTitle"
        android:layout_alignLeft="@+id/etDate"
        android:ems="10"
        android:hint="Exam2" />

    <EditText
        android:id="@+id/etStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvStartTime"
        android:layout_alignLeft="@+id/etTitle"
        android:ems="10"
        android:hint="12:00am"
        android:inputType="time" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvEndTime"
        android:layout_alignLeft="@+id/etStartTime"
        android:ems="10"
        android:hint="12:50am"
        android:inputType="time" />

    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEndTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="Add Event" />

    <Button
        android:id="@+id/btnGoToMainTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/strBack" />

</RelativeLayout>